reports olishing